# Vibecheck

./: .dockerignore  .dockstore.yml  Dockerfile  README.md  environment.yaml  pyproject.toml  test_environment.yaml
.github/workflows/: build_docker.yml  generate_release.yml  testing.yml
notebooks/: ambiquity_thresholding.ipynb  calculate_accuracy.ipynb
phonebook/: __init__.py  command.py
phonebook/resources/: o1_cholera.annotated.pb
phonebook/src/: qc.py  tasks.py
tests/: test_command.py  test_freyja_tasks.py  test_qc.py  test_tasks.py
tests/example_fasta/: ERR037738.fasta  ERS14903183.fasta  SAMN19110428.fasta
vibecheck/: __init__.py  command.py
vibecheck/resources/: o1_aliases.csv  o1_barcodes.feather  o1_cholera.no_missing.pb  reference.fasta
vibecheck/src/: console.py  freyja_tasks.py  qc.py  tasks.py  usher_tasks.py  utilities.py
vibecheck/workflows/: classify.wdl  classify_reads.wdl
