[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vibecheck"
authors = [
    {name = "Nate Matteson", email = "nmatteson@bwh.harvard.edu"},
    {name = "watronfire", email="snowboardman007@gmail.com"}
]
description = "Rapid phylogenetic assignment of O1 Vibrio cholerae lineage"
requires-python = ">=3.9,<3.13"
keywords = ["bacteria", "NGS", "snakemake", "phylogenetics"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    "biopython",
    "setuptools",
]
dynamic = ["readme", "version"]

[tool.setuptools]
packages = [
    "vibecheck",
    "vibecheck.src",
    "vibecheck.resources"
]

[tool.setuptools.package-data]
"*" = ["*.fasta", "*.pb", "*.smk", "*.feather"]

[project.scripts]
vibecheck = "vibecheck.command:main"

#[project.urls]
#Homepage = "https://github.com/CholGen/bacpage"
#Repository = "https://github.com/CholGen/bacpage.git"

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type="text/markdown"}
version = {attr = "vibecheck.__version__"}

#[tool.pytest.ini_options]
#markers = [
#    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
#]
